--- a/src/App.css
+++ b/src/App.css
@@ -3,14 +3,59 @@
   margin: 0;
   box-sizing: border-box;
 }
-nav{
-    background-color: fuchsia;
-    display: flex;
-    align-items: center;
-    flex-direction: row;
-    justify-content: space-evenly;
+nav {
+  background-color: #333; 
+  color: #fff; 
+  padding: 10px;
+  display: flex;
+  justify-content: space-between;
+  height: 150px;
 }
-nav a{
-    padding: 0px 25px 0px 25px;
-    font-size: 35px;
+
+.navegacion {
+  display: flex;
+
+}
+
+.navegacion a {
+  color: #fff;
+  text-decoration: none;
+  margin-right: 15px;
+  font-weight: bold;
+  transition: color 0.6s ease;
+  font-size: 45px; 
+
+
+}
+.navegacion a:hover {
+  color: #074ce0; 
+}
+
+.ingreso a {
+  color: #fff;
+  text-decoration: none;
+  margin-left: 15px;
+  font-weight: bold;
+  transition: color 0.6s ease;
+  font-size: 45px; 
+
+}
+.ingreso a:hover {
+  color: #074ce0; 
+}
+.usuario {
+  font-weight: bold;
+  font-size: 25px; 
+
+}
+.logout{
+  margin-bottom: 10px;
+  padding: 8px;
+  font-size: 16px;
+  margin-left: 25px;
+}
+.logout:hover{
+  color: rgb(0, 26, 255);
+    transition-duration: 0.7s;
+    transform: scale(1.1);
 }
