--- a/src/css/Signup.css
+++ b/src/css/Signup.css
@@ -61,7 +61,6 @@
 
 }
 
-  /* Estilo para los botones */
   button {
     background-color: #4caf50;
     color: white;
@@ -77,4 +76,34 @@
   }
   button:hover {
     background-color: #45a049;
+  }
+
+
+  .login-container{
+    max-width: 600px;
+    margin: auto;
+    padding: 20px;
+    border: 1px solid #ccc;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  }
+
+  .login.form{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .login-button{
+    background-color: white;
+    color: rgb(131, 0, 163);
+    padding: 10px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    font-size: 16px;
+  }
+  .login-field{
+    margin-bottom: 10px;
+    padding: 8px;
+    font-size: 16px;
   }
